# sip-uri

./: .gitleaks.toml  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
hooks/: pre-commit
src/: error.rs  host.rs  lib.rs  name_addr.rs  params.rs  parse.rs  sip_uri.rs  tel_uri.rs  uri.rs  urn_uri.rs
tests/: round_trip.rs
