[package]
name = "sip-uri"
version = "0.2.2"
edition = "2021"
rust-version = "1.70"
authors = ["Jérôme Poulin <jeromepoulin@gmail.com>"]
description = "RFC 3261 SIP/SIPS, RFC 3966 tel:, and RFC 8141 URN parser with zero dependencies"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ticpu/sip-uri"
documentation = "https://docs.rs/sip-uri"
readme = "README.md"
keywords = ["sip", "uri", "voip", "tel", "urn"]
categories = ["parser-implementations", "network-programming"]
exclude = ["CLAUDE.md", "hooks/"]

[dependencies]
